--- a/pepeizqs deals web/wwwroot/css/maestro.css
+++ b/pepeizqs deals web/wwwroot/css/maestro.css
@@ -17,9 +17,10 @@
     --colorTextoAlerta: #664d03;
     --fondoAlerta: #fff3cd;
     --colorTextoBien: #011a11;
-    --fondoBien: #057c4f;
+    --fondoBien: #035637;
     --colorTextoDlc: #edddf0;
     --fondoDlc: #733b7f;
+    --colorEnlace: #95c0fe;
 }
 
 @font-face {
